# pixel-bench-engine

./: .gitignore  Doxyfile  LICENSE  README.md  meson.build  meson_options.txt
demo/platformer/: init.cpp  meson.build
demo/platformer/chars/: player.cpp
demo/platformer/include/: chars.h  game_manager.h  input.h  player.h  spawner.h
demo/platformer/util/: game_manager.cpp
docs/: pixel-bench-design-draft.excalidraw  pull_request_template.md
include/pixbench/: audio.h  components.h  ecs.h  engine_config.h  engine_config.h.in  entity.h  game.h  gameconfig.h  hierarchy.h  init.h  physics.h  renderer.h  resource.h  systems.h  utils.h  vector2.h
include/pixbench/physics/: physics.h  type.h
include/pixbench/utils/: results.h  utils.h
pixbench/: audio.cpp  components.cpp  entity.cpp  game.cpp  hierarchy.cpp  main.cpp  physics.cpp  rendering.cpp  resource.cpp  systems.cpp  utils.cpp  vector2.cpp
src/: init.cpp
subprojects/: catch2.wrap  sdl3_mixer.wrap
subprojects/packagefiles/SDL3_mixer-3.0.0dev/: meson.build
subprojects/packagefiles/catch2-patch/: meson.build
test/: meson.build
test/pixbench/: ecs_entity_test.cpp  utils_result_type_test.cpp
user/: README.md  meson.build  pixel-bench-engine.wrap
user/src/: init.cpp  meson.build
